Fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ html {
 }
 
 #appWrapper {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 nav * {
