--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -22,8 +22,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 65px;
-  height: 65px;
+  min-width: 65px;
+  min-height: 65px;
   background-color: #00d4d000;
   border-radius: 50%;
   cursor: pointer;
@@ -46,7 +46,7 @@
 @media (min-width: 360px) {
   .icons,
   .messageIconAnimate {
-    margin: 0 2rem;
+    margin: 0 1.5rem;
   }
 }
 
